# var_byte_str

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
src/raw/: mod.rs
