[package]
name = "var_byte_str"
version = "0.1.0"
authors = ["nattapongs <nattapong.sirilappanich2@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[feature]
default=[]
serde=["serde"]

[dependencies]
bitvec="0.17"
serde={optional=true, version="1"}