[package]
name = "var_byte_str"
version = "0.1.0"
authors = ["nattapongs <nattapong.sirilappanich2@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["bitvec"]
serialize=["bitvec_serde", "serde"]

[dependencies]
smallvec={version="^1.4"}
serde={version="1", optional=true}
bitvec={version="^0.17", optional=true}
bitvec_serde={version="^0.17", package="bitvec", features=["serde"], optional=true}