[package]
name = "var_byte_str"
description="Variable byte encoding string by using gap instead of code point"
categories=["compression", "encoding"]
keywords=["variable", "byte", "encoding", "gap"]
readme="README.md"
license="BSD-2-Clause"
version = "0.1.2"
repository = "https://github.com/NattapongSiri/var_byte_str.git"
authors = ["Nattapong Sirilappanich <nattapong.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["bitvec"]
serialize=["bitvec_serde", "serde"]

[dependencies]
smallvec={version="^1.4"}
serde={version="1", optional=true}
bitvec={version="^0.17", optional=true}
bitvec_serde={version="^0.17", package="bitvec", features=["serde"], optional=true}